--- a/package.json
+++ b/package.json
@@ -3,25 +3,65 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@bgrusnak/here-maps-react": "^1.0.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "ag-grid-community": "^23.2.1",
     "ag-grid-react": "^23.2.1",
     "esri-loader": "^2.15.0",
-    "flexlayout-react": "0.4.3",
+    "esri-loader-hooks": "^0.2.0",
+    "google-map-react": "^2.1.3",
+    "gss-flex-layout": "0.0.4",
+    "here-maps-react": "^2.0.0",
+    "leaflet": "^1.7.1",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-here-map": "^4.0.0-0",
+    "react-leaflet": "^2.7.0",
     "react-redux": "^7.2.1",
     "react-scripts": "3.4.1",
+    "react-stomp": "^5.0.0",
     "redux": "^4.0.5",
-    "redux-observable": "^1.2.0"
+    "redux-observable": "^1.2.0",
+    "rxjs": "^6.6.3",
+    "slick-carousel": "^1.8.1"
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^2.5.0",
+    "husky": "^4.2.3",
+    "lint-staged": "^10.0.8",
+    "prettier": "^1.19.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx}": [
+      "prettier --write",
+      "eslint --fix"
+    ],
+    "src/**/*.{json,html,css,scss}": [
+      "prettier --write"
+    ]
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint:js": "eslint . --ext .js,.jsx",
+    "lint:js:fix": "npm run lint:js -- --fix"
   },
   "eslintConfig": {
     "extends": "react-app"
